force-app/main/default/objects/SFDC_Script_Header__c/SFDC_Script_Header__c.object-meta.xml
<CustomObject>
    <description>Stores summary information for a given call script occurrence</description>
    <label>Script Header</label>
    <nameField>
        <displayFormat>SH-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Script Header</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>