force-app/main/default/objects/SFDC_Script_Header__c/fields/Date_Taken__c.field-meta.xml
<CustomField>
    <fullName>Date_Taken__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Taken</label>
    <type>Date</type>
</CustomField>