force-app/main/default/objects/SFDC_Script_Header__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Scripts</relationshipLabel>
    <relationshipName>R00N60000001WdfVEAS</relationshipName>
    <type>Lookup</type>
</CustomField>