force-app/main/default/objects/SFDC_Script_Header__c/fields/Script__c.field-meta.xml
<CustomField>
    <fullName>Script__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Script</label>
    <referenceTo>SFDC_Script__c</referenceTo>
    <relationshipLabel>Script Results</relationshipLabel>
    <relationshipName>R00N60000001WdfKEAS</relationshipName>
    <type>Lookup</type>
</CustomField>